<resources>
    <string name="amigos">Amigos</string>
    <string name="app_name">Despesa Entre Amigos</string>
    <string name="app_name_nome">Despesa Entre Amigos - Felipe</string>
    <string name="atencao">Atenção</string>
    <string name="btn_add_amigo">Nenhum(a) amigo(a) adicionado(a).\nToque aqui para adicionar amigos(as).</string>
    <string name="btn_add_item">Nenhum item adicionado.\nToque aqui para adicionar um novo item.</string>
    <string name="btn_adicionar_imagem">Imagem do item.\n(Opcional)</string>
    <string name="cancelar">Cancelar</string>
    <string name="cancelar_despesa">Tem certeza que deseja cancelar a despesa atual?</string>
    <string name="confirmar_exclusao">Tem certeza que deseja excluir %s?</string>
    <string name="confirmar_exclusao_item">Tem certeza que deseja excluir %s de %s?</string>
    <string name="confirmar_selecao">Confirmar Seleção</string>
    <string name="descricao_despesa">Descrição da despesa *</string>
    <string name="descricao_imagem_item">Imagem do item</string>
    <string name="descricao_item">Descrição do item *</string>
    <string name="despesa">Despesa</string>
    <string name="despesa_nao_finalizada">Nova Despesa (Não Finalizada!)</string>
    <string name="dica_btn_add_amigo">Toque no botão + para adicionar um(a) novo(a) amigo(a).</string>
    <string name="dica_btn_add_despesa">Toque no botão + para adicionar uma nova despesa.</string>
    <string name="dica_nome_amigo">Nome do(a) amigo(a) *</string>
    <string name="editar">Editar</string>
    <string name="erro_campos_vazios">Por favor, preencha o(s) campo(s) vazio(s)!</string>
    <string name="erro_nome_amigo">Amigo(a) já adicionado(a)!</string>
    <string name="erro_sem_amigos">Por favor, adicione pelo menos um(a) amigo(a) a despesa!</string>
    <string name="erro_sem_descricao_despesa">Por favor, insira uma descrição para a despesa!</string>
    <string name="erro_sem_itens">Por favor, adicione pelo menos um item a despesa!</string>
    <string name="excluir">Excluir</string>
    <string name="excluir_algo">Excluir %s</string>
    <string name="excluir_tudo">Excluir Tudo</string>
    <string name="finalizar">Finalizar</string>
    <string name="finalizar_despesa">Tem certeza que deseja finalizar a despesa?</string>
    <string name="item">Item</string>
    <string name="itens">Itens</string>
    <string name="nenhum_amigo">Nenhum(a) amigo(a) encontrado(a).</string>
    <string name="nenhuma_despesa">Nenhuma despesa encontrada.</string>
    <string name="novo_amigo">Novo(a) Amigo(a)</string>
    <string name="nova_despesa">Nova Despesa</string>
    <string name="ok">OK</string>
    <string name="opcoes_item">Opções para %s</string>
    <string name="preco">Preço - un. (R$) *</string>
    <string name="quantidade">Quant. de itens *</string>
    <string name="real">Valor em reais</string>
    <string name="resumo">Resumo</string>
    <string name="resumo_despesa">Resumo de %s</string>
    <string name="salvar">Salvar</string>
    <string name="selecione_amigo">Selecione pelo menos um(a) amigo(a)!</string>
    <string name="sim">Sim</string>
    <string name="sobre">Sobre</string>
    <string name="sucesso_add_amigo">Novo(a) amigo(a) adicionado(a) com sucesso!</string>
    <string name="sucesso_amigos_despesa">Amigos(as) adicionados a despesa com sucesso!</string>
    <string name="sucesso_excluir">%s excluído(a) com sucesso!</string>
    <string name="sucesso_excluir_amigos">Todos os amigos foram excluídos com sucesso!</string>
    <string name="sucesso_excluir_item">%s excluído(a) com sucesso de %s!</string>
    <string name="sucesso_nova_despesa">%s salvo(a) com sucesso!</string>
    <string name="sucesso_novo_item">%s adicionado(a) com sucesso!</string>
    <string name="texto_confirmar_amigos">Tem certeza que deseja adicionar os amigos selecionados a despesa?</string>
    <string name="texto_excluir_todos_amigos">Tem certeza que deseja excluir todos os amigos?</string>
    <string name="texto_sobre">Aplicativo criado com o objetivo de realizar a divisão justa de gastos entre amigos ao se reunirem em bares, restaurantes e/ou na compra de algo específico. Assim fazendo com que cada um possa saber o quanto deve pagar apenas pelo que consumiu sem ter que se preocupar em fazer contas para isso.\n\nCriado por Felipe Fernandes Araujo.\n\nVersão 1.0.</string>
    <string name="todos_amigos">Todos os amigos</string>
    <string name="total">Total</string>
    <string name="ver_amigos">Ver Amigos</string>
</resources>
