<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_adicionar_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="5dp"
    tools:activity="araujo.felipe.contajusta.layouts.AdicionarItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <!-- Toolbar -->
        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />
        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">

                    <EditText
                        android:id="@+id/et_descricaoItem"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/descricao_item"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_preco_qtd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/rlDescricao">

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_preco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp">

                        <EditText
                            android:id="@+id/et_preco"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/preco"
                            android:inputType="numberDecimal" />
                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        android:id="@+id/tv_quantidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:padding="5dp"
                        android:text="@string/quantidade"
                        android:textColor="#999"
                        android:textSize="18sp" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinner_qtd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:padding="5dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_btn_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/list_border"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btn_nova_imagem"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/btn_adicionar_imagem" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/descricao_imagem_item"
                    android:scaleType="fitCenter"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_lista_amigos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_below="@id/ll_preco_qtd"
                android:orientation="vertical">

                <android.support.design.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:text="@string/amigos"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </android.support.design.widget.CoordinatorLayout>

                <ListView
                    android:id="@+id/lv_amigos_novo_item"
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:background="@drawable/list_border"
                    android:divider="#FFF"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_below="@id/ll_lista_amigos"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_cancelar_novo_item"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:layout_gravity="start|center"
                    android:text="@string/cancelar"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:theme="@style/MyMaterialTheme.ButtonRed" />

                <Button
                    android:id="@+id/btn_salvar_novo_item"
                    android:layout_width="150dp"
                    android:layout_height="55dp"
                    android:layout_gravity="end|center"
                    android:text="@string/salvar"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:theme="@style/MyMaterialTheme.ButtonGreen"/>
            </android.support.design.widget.CoordinatorLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>